# Quantum-Trading-System

./: .env.template  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
docs/: packaging.md
packaging/: __init__.py  build.py  build_config.py
packaging/templates/: dmg.json  nsis.nsi
qpo_packaging/: __init__.py  build.py  build_config.py  update_manifest.json
quantum_portfolio_optimizer/: __init__.py  app.py
quantum_portfolio_optimizer/optimization/: __init__.py  quantum_solver.py
scripts/: build_release.py  run_app.py  validate_setup.py
src/analytics/: __init__.py  backtester.py  benchmark_comparison.py  monte_carlo.py  performance_attribution.py  reporting.py  risk_analytics.py
src/notifications/: __init__.py  notification_manager.py
src/quantum_engine/: __init__.py  backend_manager.py  portfolio_qubo.py  qaoa_optimizer.py
src/trading/: __init__.py  alpaca_client.py  execution_engine.py  performance_tracker.py  portfolio_manager.py  risk_monitor.py  scheduler.py
src/ui/: __init__.py  main.py  main_window.py
src/ui/controllers/: __init__.py  portfolio_controller.py  quantum_controller.py  trading_controller.py
src/ui/dialogs/: __init__.py  settings_dialog.py
src/ui/styles/: __init__.py  themes.py
src/ui/utils/: __init__.py  signal_manager.py  update_checker.py  validators.py
src/ui/widgets/: __init__.py  analytics_widget.py  portfolio_widget.py  quantum_widget.py  results_widget.py  trading_widget.py
src/ui/workers/: __init__.py  quantum_worker.py
src/utils/: __init__.py  logger.py
tests/: __init__.py  conftest.py  test_placeholder.py
tests/analytics/: test_backtesting.py
tests/integration/: test_ui_quantum.py
tests/qpo_packaging/: test_build_system.py
tests/trading/: test_paper_trading.py
tests/ui/: test_update_checker.py  test_widgets.py
tests/unit/: test_qaoa_optimizer.py
