[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantum-portfolio-optimizer"
version = "0.1.0"
description = "Quantum-enhanced portfolio optimization desktop application"
readme = "README.md"
authors = [{ name = "Daniel Miles" }]
license = { text = "MIT" }
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Topic :: Office/Business :: Financial :: Investment",
    "Framework :: PySide"
]
dependencies = [
    "qiskit==0.43.1",
    "qiskit-aer==0.12.0",
    "qiskit-ibm-runtime==0.11.0",
    "PySide6==6.5.1",
    "pandas==2.0.3",
    "numpy==1.24.3",
    "matplotlib==3.7.1",
    "yfinance==0.2.18",
    "python-dotenv==1.0.0",
    "loguru==0.7.0",
    "openpyxl==3.1.2",
    "alpaca-trade-api==3.0.2",
    "pandas-market-calendars==4.3.1",
    "requests==2.31.0"
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.0",
    "black==23.3.0",
    "flake8==6.0.0",
    "isort==5.12.0",
    "mypy==1.4.1",
    "pytest-cov==4.0.0"
]

[tool.setuptools]
package-dir = { "quantum_engine" = "src/quantum_engine", "utils" = "src/utils", "quantum_portfolio_optimizer" = "quantum_portfolio_optimizer", "ui" = "src/ui", "analytics" = "src/analytics" }

[tool.setuptools.packages.find]
where = [".", "src"]
include = ["quantum_portfolio_optimizer*", "quantum_engine*", "utils*", "ui*", "analytics*"]

[tool.black]
line-length = 88
target-version = ["py311"]
skip-string-normalization = false

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
minversion = "7.4"
addopts = "--cov=quantum_portfolio_optimizer --cov=quantum_engine --cov=utils --cov=ui --cov-report=term-missing --strict-markers"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["quantum_portfolio_optimizer", "quantum_engine", "utils", "ui"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_return_any = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
disallow_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
plugins = []


